fix(datagrid): align expandable and detail buttons

--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -74,6 +74,15 @@
   }
 }
 
+@mixin datagrid-action-button-styles($height: tokens.$cds-global-space-10) {
+  cursor: pointer;
+  width: 100%;
+  height: $height;
+  padding-inline: calc((datagrid-variables.$clr-datagrid-fixed-column-size - tokens.$cds-global-space-7) / 2);
+  padding-block: calc(($height - tokens.$cds-global-space-7) / 2);
+  display: inline-flex;
+}
+
 @include meta.load-css('properties.datagrid');
 
 @include mixins.exports('datagrid.clarity') {
@@ -118,8 +127,7 @@
 
     .datagrid-expandable-caret-button {
       @include mixins.clr-no-styles-button();
-      cursor: pointer;
-      @include mixins.equilateral(tokens.$cds-global-space-9);
+      @include datagrid-action-button-styles();
     }
 
     .datagrid-expandable-caret-icon {
@@ -891,11 +899,16 @@
       }
     }
 
-    .datagrid-detail-caret.datagrid-cell {
-      padding: 0;
+    .datagrid-detail-caret {
+      &.datagrid-cell {
+        padding: 0;
+      }
+      .datagrid-detail-caret-button {
+        @include datagrid-action-button-styles(tables-variables.$clr-table-compact-row-height);
+      }
     }
 
-    .datagrid-cell {
+    .datagrid-cell:not(.datagrid-detail-caret):not(.datagrid-expandable-caret) {
       clr-icon {
         margin-top: calc((-1 * tokens.$cds-global-space-3) - tokens.$cds-global-space-1);
         margin-bottom: calc(-1 * tokens.$cds-global-space-3);
@@ -921,17 +934,12 @@
       }
 
       .datagrid-expandable-caret-button {
-        @include mixins.clr-no-styles-button();
-        @include mixins.equilateral(tokens.$cds-global-space-9);
+        @include datagrid-action-button-styles(tables-variables.$clr-table-compact-row-height);
         outline-offset: datagrid-variables.$clr-datagrid-compact-outline-offset;
       }
 
       .datagrid-expandable-caret-icon {
         margin: 0;
-      }
-
-      &.datagrid-cell {
-        padding: 0;
       }
 
       &.datagrid-column {
@@ -1242,13 +1250,12 @@
     justify-content: center;
 
     &.datagrid-cell {
-      padding: tokens.$cds-global-space-3 0;
+      padding: 0;
     }
 
     .datagrid-detail-caret-button {
       @include mixins.clr-no-styles-button();
-      cursor: pointer;
-      @include mixins.equilateral(tokens.$cds-global-space-9);
+      @include datagrid-action-button-styles();
 
       &:disabled cds-icon.datagrid-detail-caret-icon {
         --color: #{tokens.$cds-alias-object-interaction-color-disabled};
